--- a/Arduino/KCORES_Link_V1/platformio.ini
+++ b/Arduino/KCORES_Link_V1/platformio.ini
@@ -15,7 +15,7 @@ board = bluepill_f103c8
 ;board_build.mcu = STM32F103C6T6
 ;upload_flags = -c set CPUTAPID 0x2ba01477
 upload_protocol = hid
-upload_port = COM8
+upload_port = COM4
 framework = arduino
 lib_deps = 
     adafruit/Adafruit SSD1306@^2.4.3
@@ -35,3 +35,5 @@ build_flags =
 monitor_dtr = 1
 ; optional: set COM port to monitor here if there are multiple
 ;monitor_port= COM27
+
+extra_scripts = pre:extra.py
