--- a/Arduino/KCORES_Link_V1/.vscode/settings.json
+++ b/Arduino/KCORES_Link_V1/.vscode/settings.json
@@ -8,6 +8,7 @@
         "string_view": "cpp",
         "initializer_list": "cpp",
         "ranges": "cpp",
-        "cmath": "cpp"
+        "cmath": "cpp",
+        "mutex": "cpp"
     }
 }
