--- a/Arduino/KCORES_Link_V1/platformio.ini
+++ b/Arduino/KCORES_Link_V1/platformio.ini
@@ -18,9 +18,10 @@ upload_protocol = hid
 upload_port = COM4
 framework = arduino
 lib_deps = 
-    adafruit/Adafruit SSD1306@^2.5.7
+    adafruit/Adafruit SSD1306 @ ^2.5.7
     adafruit/Adafruit GFX Library @ ^1.11.7
     adafruit/Adafruit BusIO @ ^1.14.3
+    arkhipenko/TaskScheduler @ ^3.7.0
 build_flags =
     -w
     -D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
