--- a/Arduino/KCORES_Link_V1/platformio.ini
+++ b/Arduino/KCORES_Link_V1/platformio.ini
@@ -21,6 +21,8 @@ lib_deps =
     adafruit/Adafruit SSD1306@^2.5.7
     adafruit/Adafruit GFX Library @ ^1.11.7
     adafruit/Adafruit BusIO @ ^1.14.3
+    rlogiacco/CircularBuffer @ ^1.3.3
+    NitrofMtl/MicroTuple @ ^1.0.0
 build_flags =
     -w
     -D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
